# Worldstone

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AABB_8h_source.html  Archive_8h_source.html  BaseApp_8cpp_source.html  BaseApp_8h_source.html  BitStreamTests_8cpp.html  BitStreamTests_8cpp.js  BitStreamTests_8cpp_source.html  BitStream_8cpp_source.html  BitStream_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Copyright_8md_source.html  DC6extract_8cpp_source.html  DCxMainWindow_8cpp_source.html  DCxMainWindow_8h_source.html  DCxView_8cpp_source.html  DCxView_8h_source.html  DCxViewer_2main_8h_source.html  DECISIONS.md  Decoders_tests.html  DrawSprite_8cpp_source.html  DrawSprite_8h_source.html  FileBrowser_8cpp_source.html  FileBrowser_8h_source.html  FileStreamTests_8cpp.html  FileStreamTests_8cpp.js  FileStreamTests_8cpp_source.html  FileStream_8cpp_source.html  FileStream_8h.html  FileStream_8h_source.html  IOBase_8h_source.html  ImageViewTests_8cpp.html  ImageViewTests_8cpp.js  ImageViewTests_8cpp_source.html  (+263 more)
.github/workflows/: cmake.yml
cmake/: CI.CTestScript.cmake  FindSDL2.cmake  LTO.cmake  Warnings.cmake
doc/: Tests.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+36 more)
source/: .gitattributes  CMakeLists.txt
source/decoders/: CMakeLists.txt  dc6.cpp  palette.cpp  utils.cpp  utils.h
source/decoders/include/: AABB.h  ImageView.h  Palette.h  cof.h  dc6.h  dcc.h  dt1.h  palette.h  utils.h
source/decoders/src/: Palette.cpp  cof.cpp  dc6.cpp  dcc.cpp  dt1.cpp  palette.cpp  utils.cpp
source/decoders/tests/: CMakeLists.txt  ImageViewTests.cpp  PaletteTests.cpp  decoderstests.cpp
source/decoders/tests/workingDirectory/: BaalSpirit.dcc  BloodSmall01.dcc  CRHDBRVDTHTH.dcc  Copyright.md  HZTRLITA1HTH.dcc  NEWL1HT.cof
source/system/: CMakeLists.txt
source/system/include/: Archive.h  BitStream.h  FileStream.h  IOBase.h  Log.h  MpqArchive.h  Platform.h  Stream.h  SystemUtils.h  Vector.h
source/system/src/: BitStream.cpp  FileStream.cpp  MpqArchive.cpp  _VTablesTU.cpp
source/system/tests/: BitStreamTests.cpp  CMakeLists.txt  FileStreamTests.cpp  SystemUtilsTests.cpp  main.cpp  systemtests.cpp
source/system/tests/workingDirectory/: emptyArchive.mpq  testArchive.mpq
source/system/tests/workingDirectory/subfolder1/: insubfolder1.txt
source/tools/: CMakeLists.txt  DC6extract.cpp  MPQextract.cpp
source/tools/DCxViewer/: CMakeLists.txt  DCxMainWindow.cpp  DCxMainWindow.h  DCxView.cpp  DCxView.h  main.cpp  main.h  main.qml  main.qrc
source/tools/RendererApp/: BaseApp.cpp  BaseApp.h  CMakeLists.txt  DrawSprite.cpp  DrawSprite.h  FileBrowser.cpp  FileBrowser.h  Inputs.h  RendererApp.cpp  RendererApp.h  SearchableListWidget.cpp  SearchableListWidget.h  bgfxUtils.cpp  bgfxUtils.h  main.cpp  main.h
source/tools/RendererApp/imgui/: .gitattributes  CMakeLists.txt  imgui_bgfx.cpp  imgui_bgfx.h
source/tools/RendererApp/imgui/IconFontCppHeaders/: .gitattributes
source/tools/RendererApp/shaders/: fs_sprite.sc  vs_sprite.sc
